--- a/index.html
+++ b/index.html
@@ -1,3 +1,418 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <title>El Secreto del Zoco de las Estrellas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Tipografía árabe/mística -->
+  <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: "Scheherazade New", serif;
+    }
+
+    body {
+      background: radial-gradient(circle at top, #143a52 0%, #120c16 50%, #050308 100%);
+      color: #fdf7e7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .game-container {
+      width: 100%;
+      max-width: 480px;
+      padding: 16px;
+    }
+
+    .card {
+      background: rgba(14, 9, 20, 0.92);
+      border-radius: 18px;
+      padding: 20px;
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.5);
+      border: 1px solid rgba(255, 215, 0, 0.25);
+      position: relative;
+      overflow: hidden;
+    }
+
+    h1, h2, h3 {
+      margin-bottom: 12px;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    p {
+      margin-bottom: 10px;
+      line-height: 1.5;
+      font-size: 1.1rem;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 16px;
+      padding: 10px 18px;
+      border-radius: 999px;
+      border: none;
+      font-size: 1.1rem;
+      cursor: pointer;
+      background: linear-gradient(135deg, #ffce54, #f6a623);
+      color: #3a1800;
+      font-weight: 700;
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.45);
+      width: 100%;
+      transition: 0.2s;
+    }
+
+    .btn:hover {
+      transform: scale(1.03);
+    }
+
+    .screen {
+      display: none;
+    }
+    .screen.active {
+      display: block;
+    }
+
+    .zellige-line {
+      height: 8px;
+      width: 100%;
+      margin: 10px 0 16px;
+      background-image:
+        linear-gradient(45deg, #006d77 25%, transparent 25%),
+        linear-gradient(-45deg, #e29578 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, #ffddd2 75%),
+        linear-gradient(-45deg, transparent 75%, #83c5be 75%);
+      background-size: 14px 14px;
+      opacity: 0.85;
+    }
+
+    /* OBJETOS */
+    .objects-grid {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      gap: 12px;
+      margin-top: 14px;
+    }
+
+    .object-card {
+      border-radius: 14px;
+      padding: 18px;
+      background: rgba(44, 29, 55, 0.85);
+      border: 1px solid rgba(255, 215, 0, 0.3);
+      text-align: center;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    .object-card span {
+      font-size: 2rem;
+      display: block;
+    }
+
+    .object-card:hover {
+      transform: scale(1.06);
+      box-shadow: 0 4px 14px rgba(0,0,0,0.5);
+    }
+
+    /* COLORES */
+    .colors-row {
+      display: flex;
+      gap: 12px;
+      margin-top: 18px;
+      flex-wrap: wrap;
+    }
+
+    .color-box {
+      flex: 1;
+      min-width: 90px;
+      height: 80px;
+      border-radius: 14px;
+      padding: 8px;
+      cursor: pointer;
+      color: white;
+      font-weight: bold;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+      border: 2px solid rgba(255, 255, 255, 0.4);
+      transition: 0.2s;
+    }
+
+    .color-box.clicked {
+      transform: scale(0.95);
+      opacity: 0.7;
+      outline: 3px solid #ffd54f;
+    }
+
+    .color-azul { background: linear-gradient(135deg, #1a4f7a, #1e88e5); }
+    .color-ocre { background: linear-gradient(135deg, #bf8b3b, #ffb74d); }
+    .color-verde { background: linear-gradient(135deg, #00796b, #26a69a); }
+
+    /* DESIERTO */
+    .desert-area {
+      margin-top: 14px;
+      border-radius: 18px;
+      height: 200px;
+      background: linear-gradient(to top, #c96f28 0%, #f4a261 40%, #26163b 40%, #1d2a3a 100%);
+      position: relative;
+      overflow: hidden;
+      border: 1px solid rgba(255, 215, 0, 0.25);
+      box-shadow: inset 0 0 25px rgba(0,0,0,0.7);
+    }
+
+    .light {
+      position: absolute;
+      width: 34px;
+      height: 34px;
+      border-radius: 50%;
+      background: radial-gradient(circle, #ffe082 0%, #ffc107 40%, rgba(255,193,7,0) 70%);
+      box-shadow: 0 0 12px rgba(255,241,118,0.9);
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 0.8rem;
+      font-weight: bold;
+      color: #4e342e;
+    }
+
+    /* FINAL: Caja + Tarjeta + Camello */
+    .final-box {
+      margin: 16px auto;
+      width: 260px;
+      height: 180px;
+      padding-top: 70px;
+      background: #f5e4b0;
+      border-radius: 14px;
+      border: 3px solid #b58a3c;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 0 18px rgba(255,215,0,0.3);
+      transform-origin: top;
+      animation: box-open 1.5s ease-out forwards;
+    }
+
+    @keyframes box-open {
+      0% { transform: rotateX(90deg); opacity: 0; }
+      100% { transform: rotateX(0deg); opacity: 1; }
+    }
+
+    .card-fly {
+      position: absolute;
+      width: 180px;
+      height: 110px;
+      left: 50%;
+      top: 55%;
+      transform: translateX(-50%) translateY(40px) scale(0.8);
+      background: #ffffff;
+      border-radius: 12px;
+      border: 3px solid #d4a74d;
+      box-shadow: 0 6px 14px rgba(0,0,0,0.4);
+      text-align: center;
+      padding-top: 18px;
+      font-size: 1.2rem;
+      font-weight: 700;
+      color: #5a4318;
+      opacity: 0;
+      animation: card-rise 2s ease-out forwards;
+      animation-delay: 1.2s;
+    }
+
+    @keyframes card-rise {
+      0% {
+        opacity: 0;
+        transform: translateX(-50%) translateY(40px) scale(0.7);
+      }
+      60% {
+        opacity: 1;
+        transform: translateX(-50%) translateY(-10px) scale(1);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(-50%) translateY(-20px) scale(1);
+      }
+    }
+
+    .camel-container {
+      margin-top: 20px;
+      height: 80px;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .camel {
+      position: absolute;
+      left: -80px;
+      bottom: 0;
+      font-size: 3.2rem;
+      animation: camel-walk 7s linear forwards, camel-bob 1s infinite ease-in-out;
+    }
+
+    @keyframes camel-walk {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(140vw); }
+    }
+
+    @keyframes camel-bob {
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-4px); }
+    }
+
+  </style>
+</head>
+<body>
+  <div class="game-container">
+    <div class="card">
+
+      <!-- 🟣 PANTALLA 1: INTRO -->
+      <div id="screen-intro" class="screen active">
+        <h1>El Secreto del Zoco de las Estrellas</h1>
+        <div class="zellige-line"></div>
+
+        <p>
+          En una noche silenciosa, mientras las estrellas vigilan el cielo, recibes un mensaje sin remitente.
+        </p>
+
+        <p style="font-style: italic; text-align:center;">
+          “Quien siga la luz del desierto, hallará un regalo nacido del destino.”
+        </p>
+
+        <button class="btn" onclick="goTo('screen-story')">Entrar en el zoco</button>
+      </div>
+
+      <!-- 🟠 PANTALLA 2: HISTORIA CON MERCADER -->
+      <div id="screen-story" class="screen">
+        <h2>El Mercader de las Estrellas</h2>
+        <div class="zellige-line"></div>
+
+        <p>
+          Caminas entre farolillos y especias. Un mercader anciano te mira como si te hubiera estado esperando desde siempre.
+        </p>
+
+        <p style="font-style: italic; font-size:1.15rem;">
+          “He viajado por dunas, montañas y mares… y sé cuándo un corazón está listo para escuchar su destino.”
+        </p>
+
+        <p>
+          Te entrega una pequeña caja con <strong>tres cerraduras</strong>.
+        </p>
+
+        <p style="font-style: italic;">
+          “Solo quien supera tres pruebas de mi tierra podrá abrirla. Pero no temas… las estrellas caminan contigo.”
+        </p>
+
+        <button class="btn" onclick="goTo('screen-test1')">Comenzar la primera prueba</button>
+      </div>
+
+      <!-- 🔵 PANTALLA 3: PRUEBA 1 -->
+      <div id="screen-test1" class="screen">
+        <h2>Prueba 1: El Zoco de los Ecos</h2>
+        <div class="zellige-line"></div>
+
+        <p>
+          Elige un objeto del zoco. Cada uno guarda un secreto, una historia, una parte del viaje…
+        </p>
+
+        <p class="small">El mercader susurra: “Tu elección revela más de lo que imaginas.”</p>
+
+        <div class="objects-grid">
+          <div class="object-card" data-item="te" onclick="test1(this)">
+            <span>🍵</span>
+            <p>Tetera de menta</p>
+          </div>
+
+          <div class="object-card" data-item="minarete" onclick="test1(this)">
+            <span>🕌</span>
+            <p>Minarete</p>
+          </div>
+
+          <div class="object-card" data-item="artesano" onclick="test1(this)">
+            <span>🛠️</span>
+            <p>Artesano</p>
+          </div>
+
+          <div class="object-card" data-item="camello" onclick="test1(this)">
+            <span>🐪</span>
+            <p>Camello</p>
+          </div>
+        </div>
+
+        <p id="msg1" style="margin-top:12px; text-align:center; font-style:italic;"></p>
+      </div>
+
+      <!-- 🟡 PANTALLA 4: PRUEBA 2 -->
+      <div id="screen-test2" class="screen">
+        <h2>Prueba 2: Los Colores de Marruecos</h2>
+        <div class="zellige-line"></div>
+
+        <p>
+          Toca los tres colores. Cada uno esconde un fragmento de la historia de Marruecos.
+        </p>
+
+        <div class="colors-row">
+          <div class="color-box color-azul" data-color="azul" onclick="colorClick(this)">
+            Azul Majorelle
+          </div>
+          <div class="color-box color-ocre" data-color="ocre" onclick="colorClick(this)">
+            Ocre del Desierto
+          </div>
+          <div class="color-box color-verde" data-color="verde" onclick="colorClick(this)">
+            Verde de Zellige
+          </div>
+        </div>
+
+        <p id="msg2" style="margin-top:12px; text-align:center; font-style:italic;"></p>
+      </div>
+
+      <!-- 🟤 PANTALLA 5: PRUEBA 3 -->
+      <div id="screen-test3" class="screen">
+        <h2>Prueba 3: Las Dunas del Sueño</h2>
+        <div class="zellige-line"></div>
+
+        <p>
+          Toca la luz dorada cuando se detenga. Síguela tres veces… ella conoce el camino.
+        </p>
+
+        <div class="desert-area" id="desert-area">
+          <div class="light" id="light" onclick="lightClick()">★</div>
+        </div>
+
+        <p id="msg3" style="margin-top:12px; text-align:center; font-style:italic;"></p>
+      </div>
+
+      <!-- 🟢 PANTALLA 6: FINAL -->
+      <div id="screen-final" class="screen">
+        <h2>La Caja se Abre</h2>
+        <div class="zellige-line"></div>
+
+        <div class="final-box">
+          <div class="card-fly">Viaje a<br>Marruecos</div>
+        </div>
+
+        <div class="camel-container">
+          <div class="camel">🐪</div>
+        </div>
+
+        <p style="text-align:center; margin-top:20px; font-style:italic; font-size:1.2rem;">
+          “El verdadero destino no se revela… se siente.”
+        </p>
+
+        <button class="btn" onclick="restart()">Ver la sorpresa de nuevo</button>
+      </div>
+
+    </div>
+  </div>
 <script>
 function goTo(id){
   document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
