--- a/index.html
+++ b/index.html
@@ -392,28 +392,97 @@
       </div>
 
       <!-- 🟢 PANTALLA 6: FINAL -->
-      <div id="screen-final" class="screen">
-        <h2>La Caja se Abre</h2>
-        <div class="zellige-line"></div>
+<div id="screen-final" class="screen">
 
-        <div class="final-box">
-          <div class="card-fly">Viaje a<br>Marruecos</div>
-        </div>
+  <h2>El Mercader Habla</h2>
+  <div class="zellige-line"></div>
 
-        <div class="camel-container">
-          <div class="camel">🐪</div>
-        </div>
+  <p style="font-style:italic; text-align:center; margin-bottom:16px;">
+    “Has seguido la luz del desierto…  
+    Has escuchado los ecos del zoco…  
+    Y has unido los colores de mi tierra.”
+  </p>
 
-        <p style="text-align:center; margin-top:20px; font-style:italic; font-size:1.2rem;">
-          “El verdadero destino no se revela… se siente.”
+  <p style="text-align:center;">
+    “Entonces estás listo para conocer aquello que guardé para ti.”
+  </p>
+
+  <p style="font-style:italic; text-align:center; margin-top:10px;">
+    “Dentro de esta caja se esconde un destino…  
+    Cuando tu corazón esté preparado, ábrela.”
+  </p>
+
+  <!-- CAJA CERRADA -->
+  <div class="final-box closed" id="closed-box" style="cursor:pointer; margin-top:18px;">
+      <div class="lid-static"></div>
+      <p style="text-align:center; margin-top:70px; opacity:0.8;">
+        (Caja cerrada)
+      </p>
+  </div>
+
+  <button class="btn" style="margin-top:20px;" onclick="openFinalBox()">
+    Abrir la caja
+  </button>
+
+  <!-- CAJA ABIERTA (INVISIBLE AL INICIO) -->
+  <div id="open-box-container" style="display:none;">
+
+    <div class="reveal-glow"></div>
+
+    <div class="final-box" id="open-box">
+      <div class="lid"></div>
+
+      <div class="card-fly">Viaje a<br>Marruecos</div>
+
+      <div class="final-card-text" style="position:relative; z-index:5; margin-top:20px;">
+        <h2>🎉 ¡Feliz cumpleaños! 🎉</h2>
+        <p>Dentro de la caja encuentras una sorpresa:</p>
+        <p style="font-weight:700; margin-top:6px; font-size:1.3rem;">
+          🧳 Un viaje a Marruecos 🧳
         </p>
-
-        <button class="btn" onclick="restart()">Ver la sorpresa de nuevo</button>
+        <p class="small" style="font-style:italic;">
+          “Quien sigue la luz del desierto merece descubrir nuevos horizontes.”
+        </p>
       </div>
+    </div>
+
+    <div class="camel-container">
+      <div class="camel">🐪</div>
+    </div>
+  </div>
+
+  <button class="btn" onclick="restart()" style="margin-top:20px;">
+    Volver al inicio
+  </button>
+
+</div> 
+<!-- FIN DEL NUEVO FINAL -->
+
 
     </div>
   </div>
 <script>
+  
+  /* --- ABRIR CAJA FINAL --- */
+function openFinalBox(){
+  document.getElementById("closed-box").style.display = "none";
+  document.getElementById("open-box-container").style.display = "block";
+
+  // Reiniciar animaciones
+  const screen = document.getElementById("screen-final");
+  const toReset = [".final-box", ".lid", ".card-fly", ".reveal-glow", ".camel"];
+
+  toReset.forEach(sel => {
+    const el = screen.querySelector(sel);
+    if(el){
+      el.style.animation = "none";
+      void el.offsetWidth;
+      el.style.animation = "";
+    }
+  });
+}
+
+
 function goTo(id){
   document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
   document.getElementById(id).classList.add('active');
