Refactor open box container and card text styles
Updated styles and structure of the open box container and final card text.

--- a/index.html
+++ b/index.html
@@ -447,22 +447,17 @@
   </button>
 
   <!-- CAJA ABIERTA (INVISIBLE AL INICIO) -->
-  <div id="open-box-container" style="display:none;">
+ <div id="open-box-container" style="display:none;">
 
-    <div class="reveal-glow"></div>
+  <div class="reveal-glow"></div>
 
-    <div class="final-box" id="open-box">
-      <div class="lid"></div>
+  <div class="final-box" id="open-box">
+    <div class="lid"></div>
 
-      <div class="final-card-text" style="position:relative; z-index:5; margin-top:20px;">
-        <p style="font-weight:700; margin-top:6px; font-size:1.3rem;">
-          🧳 Un viaje a Marruecos 🧳
-        </p>
-      </div>
-    </div>
-
-    <div class="camel-container">
-      <div class="camel">🐪</div>
+    <div class="final-card-text" style="position:relative; z-index:5; margin-top:40px;">
+      <p style="font-weight:700; font-size:1.5rem; text-align:center;">
+        🧳 Un viaje a Marruecos 🧳
+      </p>
     </div>
   </div>
 
