--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <div class="lid"></div>
 
     <div class="final-card-text" style="position:relative; z-index:5; margin-top:40px;">
-      <p style="font-weight:700; font-size:1.5rem; text-align:center;">
+      <p style="font-weight:700; font-size:1.5rem; text-align:center;color:#000;">
         🧳 Un viaje a Marruecos 🧳
       </p>
     </div>
