--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="zellige-line"></div>
 
         <p>
-          Caminas entre farolillos y especias. Un mercader anciano te mira como si te hubiera estado esperando desde siempre.
+          Caminas entre casas con historia. Un mercader anciano te mira como si te hubiera estado esperando desde siempre.
         </p>
 
         <p style="font-style: italic; font-size:1.15rem;">
@@ -331,7 +331,7 @@
         </p>
 
         <p style="font-style: italic;">
-          “Solo quien supera tres pruebas de mi tierra podrá abrirla. Pero no temas… las estrellas caminan contigo.”
+          “Solo quien supera las tres pruebas de mi tierra podrá abrirla. Pero no temas… las estrellas caminan contigo.”
         </p>
 
         <button class="btn" onclick="goTo('screen-test1')">Comenzar la primera prueba</button>
@@ -420,13 +420,13 @@
   <div class="zellige-line"></div>
 
   <p style="font-style:italic; text-align:center; margin-bottom:16px;">
-    “Has seguido la luz del desierto…  
-    Has escuchado los ecos del zoco…  
-    Y has unido los colores de mi tierra.”
+    “Has escuchado los ecos del zoco…  
+    Has unido los colores de mi tierra… 
+    Has seguido la luz del desierto.”
   </p>
 
   <p style="text-align:center;">
-    “Entonces estás listo para conocer aquello que guardé para ti.”
+    “Ahora estás lista para conocer aquello que guardé para ti.”
   </p>
 
   <p style="font-style:italic; text-align:center; margin-top:10px;">
