--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         <div class="zellige-line"></div>
 
         <p>
-          Toca la luz dorada cuando se detenga. Síguela tres veces… ella conoce el camino.
+          Toca la estrella cuando se detenga. Síguela tres veces… ella conoce el camino.
         </p>
 
         <div class="desert-area" id="desert-area">
@@ -456,7 +456,7 @@
 
     <div class="final-card-text" style="position:relative; z-index:5; text-align:center;">
       <p style="font-weight:700; font-size:1.5rem; text-align:center; color:#000;">
-        🧳 Un viaje a Marruecos 🧳
+        🧳🧳 Un viaje a Marruecos 🧳🧳
       </p>
     </div>
   </div>
