--- a/index.html
+++ b/index.html
@@ -461,6 +461,18 @@
     </div>
   </div>
 
+  <!-- MENSAJE FELIZ CUMPLEAÑOS (APARECE AL ABRIR) -->
+  <p id="birthday-msg" 
+     style="
+       text-align:center; 
+       margin-top:18px; 
+       font-size:1.4rem; 
+       opacity:0; 
+       transition: opacity 1.2s ease;
+     ">
+     🎉 ¡Feliz cumpleaños, Habibi! 🎉
+  </p>
+  
   <div class="camel-container">
     <div class="camel">🐪</div>
   </div>
