Show birthday message on event
Add functionality to display birthday message.

--- a/index.html
+++ b/index.html
@@ -507,6 +507,8 @@ function openFinalBox(){
       el.style.animation = "";
     }
   });
+  // ⭐ HACER APARECER EL MENSAJE DE CUMPLEAÑOS ⭐
+  document.getElementById("birthday-msg").style.opacity = "1";
 }
 
 
