--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Un mensaje te está esperando</title>
+  <title>El Mensaje del Mercader</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Tipografía árabe/mística -->
