Update frase for item 'te' in index.html

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ function test1(el){
   let frase = "";
 
   if(item === "te")
-    frase = "“La tetera marroquí guarda el arte de la paciencia y la hospitalidad.”";
+    frase = "“La tetera guarda el arte de la paciencia y la hospitalidad.”";
 
   if(item === "minarete")
     frase = "“El minarete guía a los viajeros cuando la noche oculta los caminos.”";
