Update quote and button text in index.html

--- a/index.html
+++ b/index.html
@@ -589,10 +589,10 @@
         </p>
 
         <p style="font-style: italic; text-align:center;">
-          “Quien siga la luz del desierto, hallará un regalo nacido del destino.”
+          “Quien siga la luz del desierto, hallará un regalo nacido del destino. Firmado: El Mercader”
         </p>
 
-        <button class="btn" onclick="goTo('screen-story')">Entrar en el zoco</button>
+        <button class="btn" onclick="goTo('screen-story')">Hablar con el Mercader</button>
       </div>
 
       <!-- 🟠 PANTALLA 2: HISTORIA CON MERCADER -->
