Update text and emojis in index.html

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
 
             <div class="final-card-text">
               <p style="font-weight:700; font-size:1.5rem; color:#000;">
-                🧳 Un viaje a Marruecos 🧳
+                🧳🧳🧳 Un vuelo a Marruecos 🧳🧳🧳
               </p>
             </div>
           </div>
@@ -784,7 +784,7 @@
                 opacity:0; 
                 transition: opacity 1.2s ease;
               ">
-              🎉 ¡Feliz cumpleaños! 🎉
+              🎉🎉🎉 ¡Feliz cumpleaños, Habibi! 🎉🎉🎉
           </p>
           
           <div class="camel-container">
