--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
         <div class="zellige-line"></div>
 
         <p>
-          En una noche silenciosa, mientras las estrellas vigilan el cielo, recibes un mensaje sin remitente.
+          En una noche silenciosa, mientras las estrellas vigilan el cielo, recibes un mensaje...
         </p>
 
         <p style="font-style: italic; text-align:center;">
@@ -770,7 +770,7 @@
 
             <div class="final-card-text">
               <p style="font-weight:700; font-size:1.5rem; color:#000;">
-                🧳🧳🧳 Un vuelo a Marruecos 🧳🧳🧳
+                🧳🧳🧳 Marruecos te espera 🧳🧳🧳
               </p>
             </div>
           </div>
