Update text content and timing in index.html

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 
         <p style="font-style:italic; text-align:center; margin-top:8px;">
           “Dentro de esta caja se esconde un destino…  
-          Cuando tu corazón esté preparado, ábrela.”
+          Cuando tu corazón esté preparado, ábrela, y te revelaré tu destino.”
         </p>
 
         <!-- CAJA CERRADA -->
@@ -770,7 +770,7 @@
 
             <div class="final-card-text">
               <p style="font-weight:700; font-size:1.5rem; color:#000;">
-                🧳🧳🧳 Marruecos te espera 🧳🧳🧳
+                🧳🧳🧳 Un vuelo hacia Marruecos está esperando día y hora 🧳🧳🧳
               </p>
             </div>
           </div>
@@ -890,7 +890,7 @@
     } else {
       document.getElementById("msg3").textContent =
         "“La estrella te guía al destino final…”";
-      setTimeout(()=>goTo('screen-final'), 3000);
+      setTimeout(()=>goTo('screen-final'), 5000);
     }
   }
 
