--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
       resetLight();
     } else {
       document.getElementById("msg3").textContent =
-        "“La estrella te guía al destino final…”";
+        "“La estrella te guiará al destino final…”";
       setTimeout(()=>goTo('screen-final'), 5000);
     }
   }
